# lottery

./: .gitignore
cli/: Cargo.toml
cli/src/: main.rs
dapp/: package.json  rollup.config.js
dapp/example/localscript/: index.js  package-lock.json  package.json  rollup.config.js
dapp/example/localscript/lib/: index.cjs.js  index.esm.js
dapp/example/solong-lottery-demo/: .eslintcache  package.json
dapp/example/solong-lottery-demo/src/: App.js
dapp/lib/: index.cjs.js  index.cjs.js.map  index.esm.js  index.esm.js.map
dapp/src/: Layout.js  SolongLottery.js  index.js  utils.js
doc/: design.md
onchain-program/: Cargo.toml  Makefile
onchain-program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
