[package]
name = "solong-lottery-cli"
version = "0.1.0"
authors = ["CZ <cz.theng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.13.0"
serde_json = "1.0.59"
solana-account-decoder = "1.4.8"
solana-clap-utils = "1.4.8"
solana-cli-config = "1.4.8"
solana-cli-output = "1.4.8"
solana-client = "1.4.8"
solana-logger = "1.4.8"
solana-remote-wallet = "1.4.8"
solana-sdk = "1.4.8"
