[package]
name = "solong-lottery"
version = "0.1.0"
authors = ["CZ <cz.theng@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []

[dependencies]
solana-program = "1.4.8"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
arrayref = "0.3.6"
num_enum = "0.5.1"


[dev-dependencies]
solana-sdk = "1.4.8"

[lib]
crate-type = ["cdylib", "lib"]

